--- a/css/base.css
+++ b/css/base.css
@@ -1,15 +1,176 @@
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Manrope:wght@200..800&display=swap');
-* {
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');* {
+   *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: "Bricolage Grotesque", sans-serif;
+  
+    font-family: "Poppins", sans-serif;
 }
 
 body {
-    font-family: "Bricolage Grotesque", sans-serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 
+}
+
+/* h1,h2,h3,h4,h5,h6{
+    font-family: "Bricolage Grotesque", sans-serif;
+} */
+
+.navbar_all {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    padding: 0 7%;
+    position: sticky;
+    top: 0;
+    z-index: 454;
+    padding-block: 5px;
+    width: 100%;
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.logo {
+    height: 90px;
+    width: 200px;
+    background-image: url(../images/logo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+.nav_links a {
+    padding: 15px;
+    color: #000;
+    /* text-transform: uppercase; */
+}
+
+.nav_links a:hover {
+    color: #4f5de4;
+}
+
+.mobile a {
+    color: #000;
+}
+
+.call{
+    background-color: #f57005;
+    background-color: #4f5de4;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    padding: 0 2%;
+    padding-block: 20px;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+    color: #fff;
+}
+
+.call_icons{
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.call_icons i{
+    color: #4f5de4;
+    font-size: 18px;
+    padding: 10px;
+   
+}
+
+#toggleButton {
+    display: none;
+    background-color: #4f5de4;
+}
+
+.mobile {
+    display: none;
+}
+
+.forms {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+    position: relative;
+}
+.options input {
+    margin-top: 10px;
+}
+
+.forms input {
+    height: 40px;
+    width: 100%;
+    padding-left: 3%;
+}
+
+
+.forms select {
+    height: 40px;
+    width: 100%;
+    padding-left: 3%;
+}
+@media only screen and (max-width: 1110px) {
+    #toggleButton {
+        display: block;
+        background-color: #4f5de4;
+        background-color: transparent;
+        border: none;
+        padding: 15px;
+        color: #fff;
+
+    }
+
+    #toggleButton i {
+        font-weight: 900;
+        font-size: 20px;
+        color: #4f5de4;
+    }
+
+    .nav_links {
+        display: none;
+    }
+
+    .mobile {
+        position: absolute;
+        top: 106px;
+        z-index: 4554;
+        left: 0;
+        width: 100%;
+        background-color: #fff;
+        display: flex;
+        flex-direction: column;
+        display: none;
+    }
+
+    .mobile a {
+        border-top: 2px solid #534f4f2a;
+        width: 100%;
+        padding: 0 10%;
+        padding-block: 20px;
+    }
+
+
+    .dropdown {
+        border-top: 2px solid #534f4f2a;
+        width: 100%;
+        padding-block: 20px;
+    }
+
+    .dropdown-content {
+        margin-left: 10%;
+    }
+
+    .dropdown-content a:hover {
+        color: #4f5de4;
+    }
+}
 }
