--- a/css/teacher.css
+++ b/css/teacher.css
@@ -1,39 +1,130 @@
-.registered_teachers_all{
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+
+    font-family: "Poppins", sans-serif;
+  }
+
+  body {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .navbar_all {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    padding: 0 7%;
+    position: sticky;
+    top: 0;
+    z-index: 454;
+    padding-block: 5px;
+    width: 100%;
+   
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.logo {
+  height: 90px;
+  width: 200px;
+  background-image: url(../images/logo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+
+}
+
+.mobile a {
+    padding: 15px;
+    color: #000;
+    /* text-transform: uppercase; */
+}
+
+.mobile a:hover {
+    color: #f57005;
+}
+
+.mobile a.active {
+    background-color: #4f5de4; /* Change to your desired color */
+    color: white; /* Change text color for better contrast */
+}
+#toggleButton {
+
+    background-color: transparent;
+    border: none;
+}
+
+#toggleButton i{
+  color: #4f5de4;
+    font-size: 20px;
+}
+
+.mobile {
+    display: none;
+}
+
+.mobile {
+    position: absolute;
+    top: 100px;
+    z-index: 4554;
+   right: 0;
+    width: 250px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    display: none;
+    height: 100vh;
+}
+
+.mobile a {
+    border-bottom: 2px dashed #4f5de4;
+    width: 100%;
+    padding: 0 10%;
+    padding-block: 20px;
+}
+
+  .registered_teachers_all {
     padding: 0 10%;
     margin-top: 50px;
-}
-.registered_teachers_all table{
+  }
+  .registered_teachers_all table {
     margin-top: 30px;
-}
-table {
+  }
+  table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
     background-color: #fff;
-}
-th, td {
+  }
+  th,
+  td {
     padding: 10px;
     text-align: left;
     border: 1px solid #ddd;
-}
-th {
+  }
+  th {
     background-color: #f2f2f2;
-}
-.button {
+  }
+  .button {
     padding: 10px 15px;
     margin: 5px;
     cursor: pointer;
     border: none;
     border-radius: 5px;
     color: white;
-}
-.button-primary {
+  }
+  .button-primary {
     background-color: #007bff;
-}
-.button-danger {
+  }
+  .button-danger {
     background-color: #dc3545;
-}
-.modal {
+  }
+  .modal {
     display: none;
     position: fixed;
     z-index: 1000;
@@ -43,25 +134,33 @@ th {
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
-}
-.modal-content {
+  }
+  .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
     max-width: 600px;
-}
-.close {
+  }
+  .close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-}
-.close:hover,
-.close:focus {
+  }
+  .close:hover,
+  .close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
+  }
 
+
+  .forms button{
+    height: 50px;
+    background-color: #4f5de4;
+    border: none;
+    color: #fff;
+  }
+  
